# AstroMotion

./: .gitignore  DISTRIBUTION_README.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml
astromotion/: __init__.py  app.py  config.py  i18n.py  presets.py
astromotion/engine/: __init__.py  camera.py  camera_motion.py  color_sampling.py  particle_engine.py  particle_types.py  shader_program.py  star_extraction.py
astromotion/export/: __init__.py  gpu_offscreen_renderer.py  moviepy_muxer.py  offscreen_renderer.py  render_worker.py  video_encoder.py
astromotion/media/: __init__.py  fits_loader.py  image_loader.py  texture_loader.py
astromotion/shaders/: fullscreen_image.frag  fullscreen_image.vert  particles.frag  particles.vert  particles_compute.glsl  trail.frag  trail.vert
astromotion/ui/: advanced_settings_panel.py  gl_preview_widget.py  main_window.py  preset_bar.py  render_progress_dialog.py  theme.py
scripts/: build_release.py
tests/: test_color_sampling.py  test_export_resolution.py  test_i18n.py  test_image_loader_color.py  test_main_window.py  test_particle_buffers.py  test_presets.py  test_preview_canvas.py  test_render_stability.py  test_render_worker.py  test_star_extraction.py  test_star_particle_style.py  test_ui_settings_panel.py  test_video_encoder_fallback.py
